# nda-bids-upload

./: .gitignore  .gitmodules  Makefile  README.md  bidsjsongenerator.py  hatch_build.py  prepare.py  pyproject.toml  records.py  upload.py
examples/: ten_pseudoguids.csv
json_yaml_files/: prepare_files.py
tests/: conftest.py  discover_exclude.py  exclude.txt  populate_bids_participants.py  reduce_bids_participants.py  test_bids_examples.py  test_mappings.py  test_utilities.py
utilities/: lookup.py  lookup_editor.py  mapping.py
